--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,14 +8,17 @@ Authors@R:
            email = "dwb2@andrew.cmu.edu",
            comment = c(ORCID = "0000-0001-7745-6354"))
 Description: What the package does (one paragraph).
-License: `use_mit_license()`
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: TRUE
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.1
+RoxygenNote: 7.3.2
 Depends: 
     R (>= 3.5.0)
 Suggests: 
     rmarkdown,
-    knitr
+    knitr,
+    dendextend,
+    tidyverse,
+    ggdendro
 VignetteBuilder: knitr
