--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -86,7 +86,7 @@ jobs:
         body: |
           ## vnc ${{ steps.package_info.outputs.package_version }}
           
-          🎉 **CRAN-ready source package for quanteda.extras**
+          🎉 **CRAN-ready source package for vnc**
           
           ### 📦 Installation from Release
           
